--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <title>Stock Market Dashboard</title>
     </head>
     <body>
+        <script src="index.js"></script>
     </body>
 </html>
