--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         <script src="index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <canvas id="Chart" width="400" height="200"></canvas>
     </body>
 </html>
