--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
         <title>Stock Market Dashboard</title>
     </head>
     <body>
+
+        <form id="SearchBar">
+            <input type="text" placeholder="Please enter a ticker" id="tickerName">
+            <button type="submit">Search</button>
+        </form>
+
+        <h1 id="Ticker"></h1>
+
+        <div class="Chart" id="PriceChart">
+            <canvas id="Chart" width="400" height="200"></canvas>
+        </div>
+
         <script src="index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <canvas id="Chart" width="400" height="200"></canvas>
     </body>
 </html>
