Added the description section and changed the font of all text elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             <button type="submit">Search</button>
         </form>
 
-        <h1 id="Ticker"></h1>
+        <h1 class="Text" id="Ticker"></h1>
+
+        <div>
+            <p class="Text "id="Description"></p>
+        </div>
 
         <div class="Chart">
             <canvas id="PriceChart" width="400" height="200"></canvas>
