Made a bunch of imrpovements such destroying charts, and error checking

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <canvas id="VolumeChart" width="400" height="200"></canvas>
         </div>
 
+        <div class="Container">
+           <div id="DivendendPerShare"></div>
+           <div id="Open"></div>
+           <div id="ProfitMargin"></div>
+           <div id="DivendendYield"></div>
+        </div>
+
         <script type="module" src="index.js"></script>
     </body>
 </html>
